plugins {
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${dependencyManagementPlaginVersion}"
    id 'com.github.johnrengelman.processes' version "${johnrengelmanProcessesPluginVersion}"
    id 'org.springdoc.openapi-gradle-plugin' version "${openapiPluginVersion}"
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

group = 'com.epicCompany'
version = '0.0.1-SNAPSHOT'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: springBootVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springBootVersion
    implementation group: 'org.postgresql', name: 'postgresql', version: postgresVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: jacksonVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonVersion
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: jacksonVersion
    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: springdocOpenapiVersion
    implementation group: 'com.google.guava', name: 'guava', version: guavaVersion
    implementation group: 'org.flywaydb', name: 'flyway-core', version: flywayVersion

    compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    testCompileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion

    testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springBootVersion
    testImplementation group: 'org.assertj', name: 'assertj-core', version: assertjVersion
    testImplementation group: 'org.testcontainers', name: 'postgresql', version: testcontainersVersion
}

test {
    useJUnitPlatform()
}

openApi {
    // для анализа кода и генерации спецификации запускается приложение
    apiDocsUrl.set('http://localhost:9090/api-docs')
    forkProperties.set('-Dserver.port=9090')
    outputDir.set(file('docs'))
    outputFileName.set('openapi.yaml')
}

jar {
    enabled = false
}
